수정본 반영

--- a/LottoProject/.settings/org.eclipse.core.resources.prefs
+++ b/LottoProject/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/LottoDrawPage.java=UTF-8
 encoding//src/LottoTicket1.java=UTF-8
+encoding//src/LottoTicket2.java=UTF-8
