자동버튼 선택시 동시에 색 변화 기능 적용

--- a/LottoProject/.settings/org.eclipse.core.resources.prefs
+++ b/LottoProject/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,6 @@ encoding//src/LottoDrawPage.java=UTF-8
 encoding//src/LottoNumberPage.java=UTF-8
 encoding//src/LottoTicket1.java=UTF-8
 encoding//src/LottoTicket2.java=UTF-8
+encoding//src/LottoTicket3.java=UTF-8
+encoding//src/LottoTicket4.java=UTF-8
+encoding//src/LottoTicket5.java=UTF-8
